load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "MetaTest",
    size = "small",
    srcs = [
        "MetaTest.java",
    ],
    test_class = "com.code_intelligence.jazzer.api.MetaTest",
    deps = [
        "//agent/src/main/java/com/code_intelligence/jazzer/api",
        "@maven//:com_mikesamuel_json_sanitizer",
        "@maven//:junit_junit",
    ],
)
